objects/LBI__LatticeStatusMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__LatticeWorkflowSetting__c</fullName>
        <label>Lattice Workflow Setting</label>
        <referenceTo>LBI__LatticeWorkflowSetting__c</referenceTo>
        <relationshipLabel>Lattice Status Mappings</relationshipLabel>
        <relationshipName>LatticeStatusMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__LeadStatus__c</fullName>
        <label>Lead Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RecommendationStatus__c</fullName>
        <label>Recommendation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Status Mapping</label>
    <nameField>
        <displayFormat>LSM-{000000}</displayFormat>
        <label>Lattice Status Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Status Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>